@@ -20,6 +20,7 @@
     * SQLSetConnactAttr() -> SQLSetConnectAttrW() was passing incorrect string length
     * Fix double free in SQLGetDiagFieldW
     * Fix Unicode/Ansi conversion problem in SQLGetDiagFieldW.c
+    * Add support for Driver64 in SQLDriverConnectW
 
 26th-November-2011
 2.3.1
